--- a/mockup-trend-analyzer.html
+++ b/mockup-trend-analyzer.html
@@ -233,6 +233,10 @@
 </head>
 
 <body>
+  <!-- Hamburger button (Mobile only) -->
+  <button class="hamburger" onclick="toggleSidebar()">
+    ☰
+  </button>
   <nav class="sidebar">
     <div>
       <h1>EcoTextile</h1>
@@ -417,6 +421,21 @@
         }
       }
     });
+    function toggleSidebar() {
+      const sidebar = document.querySelector(".sidebar");
+      const overlay = document.querySelector(".overlay");
+      const body = document.body;
+
+      sidebar.classList.toggle("active");
+      overlay.classList.toggle("show");
+      body.classList.toggle("sidebar-open");
+    }
+
+    function closeSidebar() {
+      document.querySelector(".sidebar").classList.remove("active");
+      document.querySelector(".overlay").classList.remove("show");
+      document.body.classList.remove("sidebar-open");
+    }
   </script>
 </body>
 
