--- a/mockup-fabric-analysis.html
+++ b/mockup-fabric-analysis.html
@@ -12,27 +12,31 @@
 </head>
 
 <body>
+    <button class="hamburger" onclick="toggleSidebar()">
+        ☰
+    </button>
     <nav class="sidebar">
-            <div>
-                <h1>EcoTextile</h1>
-                <span>Sustain-Tech Platform</span>
-            </div>
-            <div class="nav">
-                <a href="index.html"><i data-feather="bar-chart-2"></i>Dashboard</a>
-                <a href="inventory.html"><i data-feather="archive"></i>Inventory</a>
-                <a href="suppliers.html"><i data-feather="truck"></i>Suppliers</a>
-                <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Design Assistant</a>
-                <a href="mockup-fabric-analysis.html" class="active"><i data-feather="layers"></i>Fabric Optimization</a>
-                <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Trend Analyst</a>
-                <a href="setting.html"><i data-feather="settings"></i>Settings</a>
-            </div>
-        </nav>
+        <div>
+            <h1>EcoTextile</h1>
+            <span>Sustain-Tech Platform</span>
+        </div>
+        <div class="nav">
+            <a href="index.html"><i data-feather="bar-chart-2"></i>Dashboard</a>
+            <a href="inventory.html"><i data-feather="archive"></i>Inventory</a>
+            <a href="suppliers.html"><i data-feather="truck"></i>Suppliers</a>
+            <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Design Assistant</a>
+            <a href="mockup-fabric-analysis.html" class="active"><i data-feather="layers"></i>Fabric Optimization</a>
+            <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Trend Analyst</a>
+            <a href="setting.html"><i data-feather="settings"></i>Settings</a>
+        </div>
+    </nav>
 
     <!-- MAIN CONTENT -->
     <main class="main">
         <div class="panel">
             <h2><i data-feather="activity"></i> AI Fabric Optimization</h2>
-            <p style="color: #393E46; font-style:italic">Performance and environmental metric analysis for sustainable materials.</p>
+            <p style="color: #393E46; font-style:italic">Performance and environmental metric analysis for sustainable
+                materials.</p>
 
             <div class="analysis-grid">
                 <!-- LEFT SIDE -->
@@ -85,6 +89,21 @@
 
     <script>
         feather.replace();
+        function toggleSidebar() {
+            const sidebar = document.querySelector(".sidebar");
+            const overlay = document.querySelector(".overlay");
+            const body = document.body;
+
+            sidebar.classList.toggle("active");
+            overlay.classList.toggle("show");
+            body.classList.toggle("sidebar-open");
+        }
+
+        function closeSidebar() {
+            document.querySelector(".sidebar").classList.remove("active");
+            document.querySelector(".overlay").classList.remove("show");
+            document.body.classList.remove("sidebar-open");
+        }
     </script>
 </body>
 
